--- a/lib/highscore_api_web/templates/page/index.html.eex
+++ b/lib/highscore_api_web/templates/page/index.html.eex
@@ -1,4 +1,4 @@
 <pre>
 Welcome
-https://github.com/LD45-GJG-CPB/
+<a href="https://github.com/LD45-GJG-CPB/">https://github.com/LD45-GJG-CPB/</a>
 </pre>
